# droidmaldetect-py

./: .gitignore  README.md  pyproject.toml  unzip_files.sh
droidmaldetect_py/Dataset2017/models/: NeurnalNetwork.py  NeuronalNetwork.ipynb  NeuronalNetworkGPU.ipynb  NeuronalNetworkGPU_v2.ipynb  NeuronalNetworkKeras.ipynb
droidmaldetect_py/Dataset2017/notebook/: PCS.ipynb  RNN_Series.ipynb  clean_dataset.ipynb  graphics_dataset.ipynb  join_datasets.ipynb  test.ipynb
