[tool.poetry]
name = "droidmaldetect-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
python-dotenv = "^1.0.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
