[tool.poetry]
name = "droidmaldetect-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
python-dotenv = "^1.0.0"
seaborn = "^0.13.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
torch = "^2.1.0"
ipykernel = "^6.26.0"
tensorflow = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
